--- a/index3.html
+++ b/index3.html
@@ -84,17 +84,17 @@ and open the template in the editor.
 
                     <div class="thumbnail tile tile-medium tile-emerald col-md-4">
                         <a href="#">
-                            <h1>Pejabat Timbalan Ketua setiausaha (Dasar Dan Pembangunan)</h1>
+                            <h1>Pejabat Timbalan Ketua setiausaha<br/>(Dasar Dan Pembangunan)</h1>
                         </a>
                     </div>
                     <div class="thumbnail tile tile-medium tile-peter-river col-md-4">
                         <a href="#">
-                            <h1>Pejabat Timbalan Ketua setiausaha(Kesejahteraan Bandar)</h1>
+                            <h1>Pejabat Timbalan Ketua setiausaha<br/>(Kesejahteraan Bandar)</h1>
                         </a>
                     </div>
                     <div class="thumbnail tile tile-medium tile-amethyst col-md-4">
                         <a href="#">
-                            <h1>Pejabat Timbalan Ketua setiausaha (Pengurusan)</h1>
+                            <h1>Pejabat Timbalan Ketua setiausaha<br/>(Pengurusan)</h1>
                         </a>
                     </div>
                 </div>
