--- a/index4.html
+++ b/index4.html
@@ -13,6 +13,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/metro-bootstrap.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
         <style>
             .dept h1, .corp h1{
                 margin-bottom: 2px;
@@ -41,7 +42,7 @@ and open the template in the editor.
                 color : #FFFFFF;
             }
             .list-unstyled li a:hover{
-                 background-color: #ffffff;
+                background-color: #ffffff;
                 border: 1px solid #dddddd;
                 color: #2d2d2d
             }
@@ -51,22 +52,23 @@ and open the template in the editor.
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="thumbnail tile tile-clouds col-md-3">
-                        <img width="140" height="140" src="http://www.kpkt.gov.my/kpkt_2013/assets/shared/fileupload/2013%20design/KPKT-new_s.jpg" alt="Generic placeholder image">
+                    <div class="thumbnail tile tile-medium tile-white col-md-4">
+                        <img width="130" height="130" alt="Generic placeholder image" src="http://www.kpkt.gov.my/kpkt_2013/assets/shared/fileupload/2013%20design/KPKT-new_s.jpg">
+                        
                     </div>       
-                    <div class="thumbnail tile tile-medium tile-biru col-md-9">
+                    <div class="thumbnail  tile tile-medium tile-biru col-md-8">
 
                         <h1>Kementerian Kesejahteraan Bandar, Perumahan dan Kerajaan Tempatan </h1>                            
-                        <p style="font-size: 12px">No. 51, Persiaran Perdana, Presint 4, <br/>
-                            62100, Putrajaya, Malaysia.<br/>
-                            No. Telefon : 603-8000 8000<br/>
+                        <p style="font-size: 12px">No. 51, Persiaran Perdana, Presint 4, <br>
+                            62100, Putrajaya, Malaysia.<br>
+                            No. Telefon : 603-8000 8000<br>
                             No. Faksimile : 603-8891 3182 
                         </p>
                     </div>  
 
                     <!---->
 
-                    <div class="thumbnail top-manager tile tile-single tile-turquoise col-md-12">
+                    <div class="thumbnail top-manager tile tile-single tile-nephritis col-md-12">
 
                         <h1>Pejabat Menteri</h1>                            
 
@@ -82,24 +84,24 @@ and open the template in the editor.
                         <h1>Pejabat Ketua Setiausaha</h1>                            
                     </div> 
 
-                    <div class="thumbnail tile tile-medium tile-emerald col-md-4">
+                    <div class="thumbnail tile tile-medium tile-amethyst col-md-4">
                         <a href="#">
-                            <h1>Pejabat Timbalan Ketua setiausaha (Dasar Dan Pembangunan)</h1>
+                            <h1>Pejabat Timbalan Ketua setiausaha<br/>(Dasar Dan Pembangunan)</h1>
                         </a>
                     </div>
-                    <div class="thumbnail tile tile-medium tile-peter-river col-md-4">
+                    <div class="thumbnail tile tile-medium tile-amethyst  col-md-4">
                         <a href="#">
-                            <h1>Pejabat Timbalan Ketua setiausaha(Kesejahteraan Bandar)</h1>
+                            <h1>Pejabat Timbalan Ketua setiausaha<br/>(Kesejahteraan Bandar)</h1>
                         </a>
                     </div>
                     <div class="thumbnail tile tile-medium tile-amethyst col-md-4">
                         <a href="#">
-                            <h1>Pejabat Timbalan Ketua setiausaha (Pengurusan)</h1>
+                            <h1>Pejabat Timbalan Ketua setiausaha<br/>(Pengurusan)</h1>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <div class="thumbnail tile tile-medium tile-wet-asphalt col-md-6">
+                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6">
 
                         <h1>Sektor <i>Staff Function</i></h1>
                         <ul class="list-unstyled">
@@ -112,37 +114,37 @@ and open the template in the editor.
                         </ul>
 
                     </div>
-                    <div class="thumbnail tile tile-medium tile-wisteria col-md-6">
-                        <a href="#">
-                            <h1>Sektor Pengurusan</h1>
-                            <ul class="list-unstyled">
-                                <li><a href="#">Bahagian Kewangan dan Perolehan</a></li>
-                                <li><a href="#">Bahagian Sumber Manusia</a></li>
-                                <li><a href="#">Bahagian Teknologi Maklumat</a></li>
-                                <li><a href="#">Bahagian Khidmat Pengurusan</a></li>
-                                <li><a href="#">Bahagian Akaun</a></li>
-                            </ul>
-                        </a>
+                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6">
+
+                        <h1>Sektor Pengurusan</h1>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Bahagian Kewangan dan Perolehan</a></li>
+                            <li><a href="#">Bahagian Sumber Manusia</a></li>
+                            <li><a href="#">Bahagian Teknologi Maklumat</a></li>
+                            <li><a href="#">Bahagian Khidmat Pengurusan</a></li>
+                            <li><a href="#">Bahagian Akaun</a></li>
+                        </ul>
+
                     </div>
-                    <div class="thumbnail tile tile-medium tile-nephritis col-md-6">
-                        <a href="#">
-                            <h1>Sektor Dasar dan Pembangunan</h1>
-                            <ul class="list-unstyled">
-                                <li><a href="#">Bahagian Pembangunan dan Pelaksanaan Projek</a></li>
-                                <li><a href="#">Bahagian Dasar dan Inspektorat</a></li>
-                                <li><a href="#">Bahagian Keurusetiaan Stategik dan Hubungan Antarabangsa</a></li>
-                            </ul>
-                        </a>
+                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6">
+
+                        <h1>Sektor Dasar dan Pembangunan</h1>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Bahagian Pembangunan dan Pelaksanaan Projek</a></li>
+                            <li><a href="#">Bahagian Dasar dan Inspektorat</a></li>
+                            <li><a href="#">Bahagian Keurusetiaan Stategik dan Hubungan Antarabangsa</a></li>
+                        </ul>
+
                     </div>
-                    <div class="thumbnail tile tile-medium tile-belize-hole col-md-6">
-                        <a href="#">
-                            <h1>Sektor Kesejahteraan Bandar</h1>
-                            <ul class="list-unstyled">
-                                <li><a href="#">Bahagian Kesejahteraan Bandar</a></li>
-                                <li><a href="#">Bahagian Perkhidmatan Perbandaran</a></li>
-                                <li><a href="#">Bahagian Pemberi Pinjaman Wang dan Pemegang Pajak Gadai</a></li>
-                            </ul>
-                        </a>
+                    <div class="thumbnail tile tile-medium tile-midnight-blue  col-md-6">
+
+                        <h1>Sektor Kesejahteraan Bandar</h1>
+                        </a><ul class="list-unstyled">
+                            <li><a href="#">Bahagian Kesejahteraan Bandar</a></li>
+                            <li><a href="#">Bahagian Perkhidmatan Perbandaran</a></li>
+                            <li><a href="#">Bahagian Pemberi Pinjaman Wang dan Pemegang Pajak Gadai</a></li>
+                        </ul>
+
                     </div>                                                           
                 </div>
                 <div class="col-lg-7">
@@ -186,7 +188,7 @@ and open the template in the editor.
                             <h1>Institut Latihan KPKT (I-KPKT)</h1>
                         </a>
                     </div>
-                    <div class="thumbnail corp tile tile-small tile-midnight-blue col-md-12">
+                    <div class="thumbnail corp tile tile-small tile-pumpkin col-md-12">
                         <a href="#">
                             <h1>Perbadanan Pengurusan Sisa Pepejal dan Pembersihan Awam</h1>
                         </a>
@@ -196,5 +198,11 @@ and open the template in the editor.
             </div>
 
         </div>
+
+        <script>
+            //            $(document).ready(function () {         
+            //                $('.tile-biru').removeClass('tile-biru').addClass('tile-turquoise');
+            //            });
+        </script>
     </body>
 </html>
