--- a/index4.html
+++ b/index4.html
@@ -52,12 +52,10 @@ and open the template in the editor.
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="thumbnail tile tile-medium tile-white col-md-4">
+                    <div class="thumbnail tile tile-medium tile-white col-md-4  col-xs-4">
                         <img width="130" height="130" alt="Generic placeholder image" src="http://www.kpkt.gov.my/kpkt_2013/assets/shared/fileupload/2013%20design/KPKT-new_s.jpg">
-                        
                     </div>       
-                    <div class="thumbnail  tile tile-medium tile-biru col-md-8">
-
+                    <div class="thumbnail  tile tile-medium tile-biru col-md-8  col-xs-8">
                         <h1>Kementerian Kesejahteraan Bandar, Perumahan dan Kerajaan Tempatan </h1>                            
                         <p style="font-size: 12px">No. 51, Persiaran Perdana, Presint 4, <br>
                             62100, Putrajaya, Malaysia.<br>
@@ -65,44 +63,42 @@ and open the template in the editor.
                             No. Faksimile : 603-8891 3182 
                         </p>
                     </div>  
-
                     <!---->
-
-                    <div class="thumbnail top-manager tile tile-single tile-nephritis col-md-12">
+                    <div class="clearfix"></div>
+                    <div class="thumbnail top-manager tile tile-single tile-nephritis col-md-12 col-xs-12">
 
                         <h1>Pejabat Menteri</h1>                            
 
                     </div> 
                     <!---->
-
-                    <div class="thumbnail top-manager tile tile-single tile-orange col-md-12">
+                    <div class="clearfix"></div>
+                    <div class="thumbnail top-manager tile tile-single tile-orange col-md-12 col-xs-12">
                         <h1>Pejabat Timbalan Menteri</h1>                            
                     </div> 
                     <!---->
-
-                    <div class="thumbnail top-manager tile tile-single tile-pomegranate col-md-12">
+                    <div class="clearfix"></div>
+                    <div class="thumbnail top-manager tile tile-single tile-pomegranate col-md-12 col-xs-12">
                         <h1>Pejabat Ketua Setiausaha</h1>                            
                     </div> 
-
-                    <div class="thumbnail tile tile-medium tile-amethyst col-md-4">
+                    <div class="clearfix"></div>
+                    <div class="thumbnail tile tile-medium tile-amethyst col-md-4 col-xs-4">
                         <a href="#">
                             <h1>Pejabat Timbalan Ketua setiausaha<br/>(Dasar Dan Pembangunan)</h1>
                         </a>
                     </div>
-                    <div class="thumbnail tile tile-medium tile-amethyst  col-md-4">
+                    <div class="thumbnail tile tile-medium tile-amethyst  col-md-4 col-xs-4">
                         <a href="#">
                             <h1>Pejabat Timbalan Ketua setiausaha<br/>(Kesejahteraan Bandar)</h1>
                         </a>
                     </div>
-                    <div class="thumbnail tile tile-medium tile-amethyst col-md-4">
+                    <div class="thumbnail tile tile-medium tile-amethyst col-md-4 col-xs-4">
                         <a href="#">
                             <h1>Pejabat Timbalan Ketua setiausaha<br/>(Pengurusan)</h1>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6">
-
+                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6 col-xs-6">
                         <h1>Sektor <i>Staff Function</i></h1>
                         <ul class="list-unstyled">
                             <li><a href="#">Bahagian Undang-undang</a></li>
@@ -114,8 +110,7 @@ and open the template in the editor.
                         </ul>
 
                     </div>
-                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6">
-
+                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6 col-xs-6">
                         <h1>Sektor Pengurusan</h1>
                         <ul class="list-unstyled">
                             <li><a href="#">Bahagian Kewangan dan Perolehan</a></li>
@@ -126,8 +121,7 @@ and open the template in the editor.
                         </ul>
 
                     </div>
-                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6">
-
+                    <div class="thumbnail tile tile-medium tile-midnight-blue col-md-6 col-xs-6">
                         <h1>Sektor Dasar dan Pembangunan</h1>
                         <ul class="list-unstyled">
                             <li><a href="#">Bahagian Pembangunan dan Pelaksanaan Projek</a></li>
@@ -136,8 +130,7 @@ and open the template in the editor.
                         </ul>
 
                     </div>
-                    <div class="thumbnail tile tile-medium tile-midnight-blue  col-md-6">
-
+                    <div class="thumbnail tile tile-medium tile-midnight-blue  col-md-6 col-xs-6">
                         <h1>Sektor Kesejahteraan Bandar</h1>
                         </a><ul class="list-unstyled">
                             <li><a href="#">Bahagian Kesejahteraan Bandar</a></li>
@@ -146,49 +139,48 @@ and open the template in the editor.
                         </ul>
 
                     </div>                                                           
-                </div>
-                <div class="col-lg-7">
-                    <div class="thumbnail dept tile tile-small tile-concrete col-md-12">
+                    <div class="clearfix"></div>
+                    <div class="thumbnail dept tile tile-small tile-silver col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Jabatan Bomba dan Penyelamat Malaysia</h1>
                         </a>
                     </div>
-                    <div class="thumbnail dept tile tile-small tile-concrete col-md-12">
+                    <div class="thumbnail dept tile tile-small tile-silver col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Jabatan Perancangan Bandar dan Desa</h1>
                         </a>
                     </div>
-                    <div class="thumbnail dept tile tile-small tile-concrete col-md-12">
+                    <div class="thumbnail dept tile tile-small tile-silver col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Jabatan Perumahan Negara</h1>
                         </a>
                     </div>
-                    <div class="thumbnail dept tile tile-small tile-concrete col-md-12">
+                    <div class="thumbnail dept tile tile-small tile-silver col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Jabatan Kerajaan Tempatan</h1>
                         </a>
                     </div>
-                    <div class="thumbnail dept tile tile-small tile-concrete col-md-12">
+                    <div class="thumbnail dept tile tile-small tile-silver col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Jabatan Landskap Negara</h1>
                         </a>
                     </div>
-                    <div class="thumbnail dept tile tile-small tile-concrete col-md-12">
+                    <div class="thumbnail dept tile tile-small tile-silver col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Jabatan Pengurusan Sisa Pepejal Negara</h1>
                         </a>
                     </div>
-                    <div class="thumbnail dept tile tile-small tile-concrete col-md-12">
+                    <div class="thumbnail dept tile tile-small tile-silver col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Tribunal Perumahan dan Pengurusan Strata</h1>
                         </a>
                     </div>
-                    <div class="thumbnail dept tile tile-small tile-concrete col-md-12">
+                    <div class="thumbnail dept tile tile-small tile-silver col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Institut Latihan KPKT (I-KPKT)</h1>
                         </a>
                     </div>
-                    <div class="thumbnail corp tile tile-small tile-pumpkin col-md-12">
+                    <div class="thumbnail corp tile tile-small tile-pumpkin col-md-12 col-xs-12">
                         <a href="#">
                             <h1>Perbadanan Pengurusan Sisa Pepejal dan Pembersihan Awam</h1>
                         </a>
